--- a/src/assets/OS.css
+++ b/src/assets/OS.css
@@ -3,6 +3,8 @@ body{
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
     color: wheat;
+    margin: 0;
+    overflow: hidden;
 }
 .v{
     display: flex;
